--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div id="pregunta">
-        ¿Quieres ser mi novia?
+        ¿Vemos una peli juntos?
     </div>
     <div id="botones">
         <button class="boton" id="si">Sí</button>
@@ -49,7 +49,7 @@
 
     <script>
         document.getElementById("si").addEventListener("click", function() {
-            alert("¡Eso es genial! 😊");
+            alert("¡sabia que dirias que si! 😊");
         });
 
         document.getElementById("no").addEventListener("click", function() {
